--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,7 +125,7 @@
                 Greetings, I'm Rafay 👋. I hold a Master’s degree from the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, where I focused on scientific computing, robotics and 3D computer vision. My master's thesis, conducted at the <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei Intelligent Cloud Technologies Lab</a>, centered on advancing <a href= "http://opensu3d.github.io/">Open World 3D Scene Understanding</a>. Previously, I served as a Robotics Research Intern, concentrating on lifelong localization and mapping. During my studies, I also worked as a Student Research Assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, contributing to various robotics projects.
               </p>  
                 <p align="justify">
-                My primary interests lie in robotics, computer vision, machine learning, and physics simulation, with ~ three years of experience in R&D, I have worked on a wide range of projects across these fields.
+                My primary interests spans robotics, 3D computer vision, machine learning, and physics simulation. With experience working on diverse R&D projects across these fields.
                 </p>
               
               
