--- a/style.scss
+++ b/style.scss
@@ -71,7 +71,6 @@ h1 {
   margin-block-end: 14px;
   margin-left: 0px;
   margin-right: 0px;
-
 }
 
 .one {
@@ -97,6 +96,61 @@ h1 {
 
 span.highlight {
   background-color: #ffffd0;
+}
+
+/* News Section Styles */
+.collapsible {
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  outline: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+}
+
+.news-content {
+  padding: 2.5%;
+  width: 100%;
+  vertical-align: middle;
+}
+
+.news-scroll {
+  max-height: 8.5em;
+  overflow-y: auto;
+}
+
+.news-scroll ul {
+  margin-top: 0;
+  padding-left: 20px;
+}
+
+.news-scroll li {
+  text-align: justify;
+  margin-bottom: 0.5em;
+}
+
+/* Date Colors */
+.date-red {
+  color: #e74c3c;
+}
+
+.date-blue {
+  color: #3498db;
+}
+
+.date-purple {
+  color: #9b59b6;
+}
+
+/* Table Styles */
+table {
+  width: 100%;
+  border: 0;
+  border-spacing: 0;
+  border-collapse: separate;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
