--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <!--link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css"-->
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   <style>
     /* Modern Navigation Bar Styles */
@@ -98,7 +98,7 @@
 
 <body>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-    <tr style="padding:0px">
+    <tr style="padding:px">
       <td style="padding:0px">
 
 <!-- Section Tab -->
@@ -114,19 +114,18 @@
         </div>
 
 <!-- Name -->
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:40px;"><tbody>
           <tr style="padding:0px">                                    
-            <td style="padding:1%;width:63%;vertical-align:middle">
-              <p style="text-align:center">
-                <h1  style="font-size: 40px;text-align:center"><name>Rafay Mohiuddin</name></h1>
+            <td style="padding:0%;width:63%;vertical-align:middle">
+              <p style="text-align:center;margin:0;">
+                <h1 style="font-size: 40px;text-align:center;margin:0;"><name>Rafay Mohiuddin</name></h1>
               </p>
             </td>
           </tr>            
         </table>
 
 <!-- Introduction -->
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:-10px;">
           <tr style="padding:0px">
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
@@ -200,37 +199,7 @@
   </div>
   <hr class="soft">
   
-<!-- News -->
-<button class="collapsible" data-toggle="collapse" data-target="#content-news" id="news">
-  <h2>News</h2>
-</button>
-<div id="content-news" class="collapse in">
-  <table>
-    <tr>
-      <td class="news-content">
-        <div class="news-scroll">
-          <ul>
-            <li><span class="date-red">[05/2025]</span> OpenSU3D was presented at ICRA'25 on 22 May 2025 🎉🚀</li>
-            <li><span class="date-blue">[03/2025]</span> Accepted into the ATLER Entrepreneurship in Residence program 🚀</li>
-            <li><span class="date-red">[01/2025]</span> OpenSU3D paper accepted at ICRA'25 — check out the <a href="https://opensu3d.github.io/">Project Page</a> 🎓📢</li>
-            <li><span class="date-purple">[01/2025]</span> Started building a startup idea around 3D generation 💡🔥</li>
-            <li><span class="date-red">[09/2024]</span> Graduated with an M.Sc. from TUM 🧑‍🎓🎓</li>
-            <li><span class="date-blue">[04/2024]</span> Defended Master's thesis on "Open World 3D Scene Understanding" at TUM 🛡️👏</li>
-            <li><span class="date-blue">[10/2023]</span> Started thesis research in 3D scene understanding 🔍📊</li>
-            <li><span class="date-blue">[04/2023]</span> Joined Huawei Munich Research Center as a Research Intern working on Life-Long SLAM 🤖🏢</li>
-            <li><span class="date-red">[03/2023]</span> Paper on Additive Manufacturing accepted at ISARC'23 📄🎉</li>
-            <li><span class="date-purple">[04/2022]</span> Started working as a HiWi at the Chair of Computational Modeling and Simulation 🛠️🧠</li>
-            <li><span class="date-blue">[10/2021]</span> Started M.Sc. at TUM, moved to Munich, Germany 🎓🇩🇪</li>
-            <li><span class="date-red">[10/2020]</span> Published BE research paper on Nanofluids in Wiley Journal of Heat Transfer 📢📄</li>
-            <li><span class="date-purple">[07/2020]</span> Joined PNEC NUST to work on Aerial Robots 🤖✈️</li>
-            <li><span class="date-red">[12/2019]</span> Completed B.E. from NEDUET, Pakistan 🎓🎉</li>
-          </ul>
-        </div>
-      </td>
-    </tr>
-  </table>
-</div>
-<hr class="soft">
+
   
 
 <!-- Experience -->
