--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -165,13 +165,13 @@
 
 
 <!-- News -->
-<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-news" id="news">
+<button style="padding:0; border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-news" id="news">
   <h2>News</h2>
 </button>
 <div id="content-news" class="collapse in">
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tr>
-      <td style="padding:2.5%;width:100%;vertical-align:middle">
+      <td style="padding:0;width:100%;vertical-align:middle">
         <!-- Limit to 5 visible items, scroll rest -->
         <div style="max-height: 9.5em; overflow-y: auto;">
           <ul style="margin-top: 0; padding-left: 20px;">
