--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -165,16 +165,16 @@
 
 
 <!-- News -->
-<button style="padding:0; border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-news" id="news">
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-news" id="news">
   <h2>News</h2>
 </button>
 <div id="content-news" class="collapse in">
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tr>
-      <td style="padding:0;width:100%;vertical-align:middle">
+      <td style="padding:0%;width:100%;vertical-align:middle">
         <!-- Limit to 5 visible items, scroll rest -->
         <div style="max-height: 9.5em; overflow-y: auto;">
-          <ul style="margin-top: 0; padding-left: 20px;">
+          <ul style="margin-top: 0; padding-left: 60px;">
             <li align="justify"><span style="color:red">[05/2025]</span> OpenSU3D was presented at ICRA'25 on 22 May 2025 🎉🚀</li>
             <li align="justify"><span style="color:blue">[03/2025]</span> Accepted into the ATLER Entrepreneurship in Residence program 🚀</li>
             <li align="justify"><span style="color:red">[01/2025]</span> OpenSU3D paper accepted at ICRA'25 — check out the <a href="https://opensu3d.github.io/">Project Page</a> 🎓📢</li>
@@ -214,7 +214,7 @@
   <tr>
     <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
         <div class="one">
-            <img src='images/huawei-logo.png' style="width:70%; height:auto;" alt="project image">
+            <img src='images/huawei-logo.jpg' style="width:70%; height:auto;" alt="project image">
         </div>
     </td>
     <td style="padding:2.5%;width:75%;vertical-align:top">
