--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -214,7 +214,7 @@
   <tr>
     <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
         <div class="one">
-            <img src='images/huawei-logo.jpg' style="width:70%; height:auto;" alt="project image">
+            <img src='images/huawei-logo.jpeg' style="width:70%; height:auto;" alt="project image">
         </div>
     </td>
     <td style="padding:2.5%;width:75%;vertical-align:top">
